kubernetes-services/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: 172.232.101.210
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontendservice
                port:
                  number: 80
